<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="edu.orangecoastcollege.cs272.taskr.controller.ViewProjectActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/ma_vproj_nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/ma_vproj_nameTV"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ma_vproj_dueDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/ma_vproj_dueDateTV"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ma_vproj_descriptionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/ma_vproj_descriptionTV"
                android:textSize="18sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/ma_vproj_subtaskTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/ma_vproj_subtasksTV"
            android:textSize="18sp"/>

        <ListView
            android:id="@+id/ma_projectSubsLV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:divider="#CCCCCC"
            android:dividerHeight="1dp"
            android:background="@drawable/border"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/ma_vproj_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ma_vproj_edit_button"
                android:layout_weight="1" />

            <Button
                android:id="@+id/ma_vproj_view_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_vproj_view_button" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/ma_vproj_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ma_vproj_add_button"
                android:layout_weight="1" />

            <Button
                android:id="@+id/ma_vproj_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_vproj_delete_button"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>