<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs272.taskr.view.manager.ViewSubtaskActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/ma_vsub_nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/ma_vsub_nameTV"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ma_vsub_dueDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/ma_vsub_dueDateTV"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ma_vsub_descriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/ma_vsub_descriptionTV"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="2"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/ma_vsub_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ma_vsub_edit_button" />

    </LinearLayout>

</LinearLayout>