<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="edu.orangecoastcollege.cs272.taskr.controller.ViewAllProjectsActivity">

    <ListView
        android:id="@+id/ma_projectsLV"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:padding="10dp"
        android:divider="#CCCCCC"
        android:dividerHeight="1dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/holo_orange_light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/ma_view_project_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ma_view_project_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ma_add_project_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_add_project_button" />

            <Button
                android:id="@+id/ma_delete_project_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_delete_project_button"
                android:textColor="@android:color/holo_red_dark"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>