<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="edu.orangecoastcollege.cs272.taskr.controller.MainActivity">

    <!-- //// BEGIN MAIN LINEAR LAYOUT //// -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:weightSum="3"
        android:orientation="vertical">


        <!-- // Begin Vincent's Portion // -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5"
            android:background="@color/thistle">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_vincent_scheduler_desc"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ma_vincent_scheduler_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:background="@color/plum"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ma_vincent_go_to_templates"
                    android:background="@android:color/transparent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_vincent_go_text"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>
        <!-- // End Vincent's Portion // -->

        <!-- // Begin Derek's Portion // -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5"
            android:background="@color/lightSteelBlue">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_derek_manager_desc"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ma_derek_manager_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:background="@color/lightSlateGray"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ma_derek_go_to_projects"
                    android:background="@android:color/transparent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_derek_go_text"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>
        <!-- // End Derek's Portion // -->

        <!-- // Begin Brian's Portion // -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5"
            android:background="@color/honeydew">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_brian_reminder_desc"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ma_brian_reminder_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:background="@color/darkSeaGreen"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ma_brian_go_to_reminders"
                    android:background="@android:color/transparent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_brian_go_text"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>
        <!-- // End Brian's Portion // -->

    </LinearLayout>
    <!-- //// END MAIN LINEAR LAYOUT //// -->

    <!-- //// BEGIN GOOGLE LOGIN BUTTON ROW //// -->
    <LinearLayout
        android:id="@+id/ma_vincent_login_bar"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/tomato"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <TextView
            android:id="@+id/ma_vincent_login_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ma_vincent_login_text_false"
            android:textSize="24sp"
            android:visibility="visible"
            android:gravity="center"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible"/>
    </LinearLayout>
    <!-- //// END GOOGLE LOGIN BUTTON ROW //// -->

</LinearLayout>
